# self-driving-car

./: CODEOWNERS  LICENSE.md  License.txt  README.md
image-localization/community-code/lastminute/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
image-localization/community-code/lastminute/include/udacity_place_recognition/: PlaceDetector.h  TemplatedLoopDetector.h
image-localization/community-code/lastminute/launch/: place_recognition.launch
image-localization/community-code/lastminute/scripts/: bag2images.py
image-localization/community-code/lastminute/src/: udacity_place_recognition_node.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/: CMakeLists.txt  COPYING  Doxyfile  Makefile  Makefile.const  README.md  mainpage.dox  package.xml
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/cmake/: CPUFeatures
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/: Network.h  Neuron.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/ActivationFunction/: ActivationFunction.h  Heaviside.h  HyperbolicTangent.h  LeakyRectifiedLinear.h  Linear.h  RectifiedLinear.h  Sigmoid.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/BasisFunction/: BasisFunction.h  Linear.h  Product.h  Radial.h  StreamingBasisFunction.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/Cascade/: Network.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/ConstructiveAlgorithms/: Cascade2.h  CascadeCorrelation.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/FeedForward/: Layer.h  Network.h  Perceptron.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/Learning/: BackPropagation.h  BatchPropagation.h  PerceptronLearning.h  QuickPropagation.h  RProp.h  iRPropPlus.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/Learning/CorrectionFunction/: ArcTangent.h  CorrectionFunction.h  Linear.h  Optical.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/ProblemSets/: Chess.h  Logical.h  Parity.h  TwoSpirals.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/include/NeuralNetwork/Recurrent/: Network.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/lib/SimpleJSON/: .gitmodules  CMakeLists.txt  COPYING
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/lib/SimpleJSON/include/: SimpleJSON.h
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/lib/SimpleJSON/tests/: factory.cpp  parser.cpp  perf.cpp  serializable.cpp  test.cpp  types.cpp  value.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/src/NeuralNetwork/: IMPL.cpp  Neuron.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/src/NeuralNetwork/BasisFunction/: Linear.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/src/NeuralNetwork/ConstructiveAlgorithms/: Cascade2.cpp  CascadeCorrelation.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/src/NeuralNetwork/FeedForward/: Layer.cpp  Network.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/src/NeuralNetwork/Learning/: BackPropagation.cpp  BatchPropagation.cpp  PerceptronLearning.cpp  QuickPropagation.cpp  RProp.cpp  iRPropPlus.cpp
image-localization/community-code/roboauto/ros/src/NeuralNetworkLib/src/NeuralNetwork/Recurrent/: Network.cpp
image-localization/community-code/roboauto/ros/src/image_descriptor/: CMakeLists.txt  package.xml
image-localization/community-code/roboauto/ros/src/image_descriptor/include/ImageDescriptor/: Horizont.h  ImageDescriptor.h
image-localization/community-code/roboauto/ros/src/image_descriptor/src/: Horizont.cpp
image-localization/community-code/roboauto/ros/src/motion/: 100_25.json  200_100.json  25.json  500.json  CMakeLists.txt  net.json  package.xml  test.json  test100.json  test100_10k.json  test100_20k.json
image-localization/community-code/roboauto/ros/src/motion/include/: Config.h  Motion.h  MotionLearner.h  MotionTest.h  Sample.h
image-localization/community-code/roboauto/ros/src/motion/src/: Motion.cpp  MotionLearner.cpp  MotionTest.cpp  main.cpp
image-localization/community-code/roboauto/ros/src/slam/: CMakeLists.txt  config.json  package.xml
image-localization/community-code/roboauto/ros/src/slam/src/: BridgeDetector.h  Filter.h  Slam.cpp  Slam.h  SlamImpl.cpp  SlamImpl.h  TestSlam.h  TrafficLightDetector.h  WeightFunction.cpp  WeightFunction.h  dataSetCreator.cpp  gpxExporter.cpp  horizonValidator.cpp  main.cpp  paramSolver.cpp  validator.cpp
image-localization/community-code/roboauto/ros/src/udacity_launch/: CMakeLists.txt
image-localization/community-code/roboauto/ros/src/udacity_launch/launch/: bag_play.launch  record_video.launch
image-localization/community-code/roboauto/ros/src/udacity_launch/rviz/: disp.rviz
image-localization/community-code/roboauto/ros/src/utils/: CMakeLists.txt  package.xml
image-localization/community-code/roboauto/ros/src/utils/include/utils/: CVSerializationHelper.h  Camera.h  Clusterization.h  ColorFiltration.h  DetectedObjects.h  EvolutionStrategy.h  General.h  GpsCoords.h  Map.h  OpticalFlow.h  ParticleFilter.h  PoleDetector.h  Random.h  SerializationHelper.h  SignDetection.h  Topics.h  Visualization.h
image-localization/community-code/roboauto/ros/src/utils/src/: Camera.cpp  GpsCoords.cpp  PoleDetector.cpp  SignDetection.cpp  Visualization.cpp
image-localization/community-code/roboauto/ros/src/validator/: CMakeLists.txt  package.xml
image-localization/community-code/roboauto/ros/src/validator/include/: MotionValidator.h  Validator.h
image-localization/community-code/roboauto/ros/src/validator/src/: MotionValidator.cpp  Validator.cpp  main_MotionValidator.cpp  main_Validator.cpp
(+225 files in other folders)
