<?xml version="1.0"?>
<package>
  <name>udacity_place_recognition</name>
  <version>1.0.0</version>
  <description>The udacity_place_recognition package</description>

  <maintainer email="yan@vertical.ai">yanma</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
