<?xml version="1.0"?>
<package>
  <name>NeuralNetwork</name>
  <version>1.0.0</version>
  <description>NeuralNetworkLib</description>
  <license>BSD</license>
  <maintainer email="tomas.cernik@artin.cz">Tomáš Černík</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
